# lab2

./: CMakeCache.txt  CMakeLists.txt  Makefile  a.out  cmake_install.cmake  input.txt  main.c  my_program  queue.c  queue.h  queue_app  queue_array.c  queue_list.c
